fixed alignment of modal when shrinking to mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -74,6 +74,10 @@ h2 {
   align-items: center;
 }
 
+button {
+  cursor: pointer;
+}
+
 .button {
   text-transform: uppercase;
   padding: 0.4rem 0.8rem;
@@ -144,13 +148,16 @@ ul {
 
 .pop-up-container {
   width: 500px;
-  height: 180px;
+  height: 20%;
   background-color: white;
   position: fixed;
-  top: 300px;
-  right: 600px;
+  top: 40%;
+  right: 10%;
+  left: 10%;
   text-align: center;
+  justify-content: center;
   border-radius: 5px;
+  margin: 0 auto;
 }
 
 .pop-up-text {
